--- a/index.html
+++ b/index.html
@@ -31,15 +31,28 @@
         <h1>My E-commerce Store</h1>
     </header>
     <main>
-        <section class="product">
+        <section class="product" id="product1">
             <img src="product1.jpg" alt="Product 1">
             <h2>Product 1</h2>
             <p>Description of Product 1.</p>
             <p class="price">$19.99</p>
-            <button class="add-to-cart">Add to Cart</button>
+            <button class="add-to-cart" onclick="addToCart('product1', 'Product 1', 19.99)">Add to Cart</button>
+        </section>
+        <section class="product" id="product2">
+            <img src="product2.jpg" alt="Product 2">
+            <h2>Product 2</h2>
+            <p>Description of Product 2.</p>
+            <p class="price">$29.99</p>
+            <button class="add-to-cart" onclick="addToCart('product2', 'Product 2', 29.99)">Add to Cart</button>
         </section>
         <!-- Add more product sections here -->
     </main>
+    <aside>
+        <h2>Shopping Cart</h2>
+        <ul id="cart"></ul>
+        <p>Total: <span id="total">$0.00</span></p>
+        <button id="checkout" onclick="checkout()">Checkout</button>
+    </aside>
     <footer>
         <p>&copy; 2023 My E-commerce Store</p>
     </footer>
