--- a/products.html
+++ b/products.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My E-commerce Store</title>
+    <title>Products - My E-commerce Store</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -18,14 +18,14 @@
         </nav>
     </header>
     <main>
-        <section class="product" id="product1">
+        <section class="product">
             <img src="product1.jpg" alt="Product 1">
             <h2>Product 1</h2>
             <p>Description of Product 1.</p>
             <p class="price">$19.99</p>
             <button class="add-to-cart" onclick="addToCart('product1', 'Product 1', 19.99)">Add to Cart</button>
         </section>
-        <section class="product" id="product2">
+        <section class="product">
             <img src="product2.jpg" alt="Product 2">
             <h2>Product 2</h2>
             <p>Description of Product 2.</p>
@@ -34,12 +34,6 @@
         </section>
         <!-- Add more product sections here -->
     </main>
-    <aside>
-        <h2>Shopping Cart</h2>
-        <ul id="cart"></ul>
-        <p>Total: <span id="total">$0.00</span></p>
-        <button id="checkout" onclick="checkout()">Checkout</button>
-    </aside>
     <footer>
         <p>&copy; 2023 My E-commerce Store</p>
     </footer>
