--- a/contact.html
+++ b/contact.html
@@ -65,4 +65,6 @@
         <p>&copy; 2023 My E-commerce Store</p>
     </footer>
 </body>
+
+<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeJOnzOFIrehf2BAubnsA_SLoggyGsQFPjnmkamIzUPSQNXww/viewform?embedded=true" width="640" height="959" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
 </html>
