--- a/index.html
+++ b/index.html
@@ -1,5 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
+<div id="campaign-banner">
+    <p>🎉 Limited-time Offer: Get 10% off on all products with code <strong>SAVE10</strong>! 🎉</p>
+    <button id="close-campaign" onclick="closeCampaign()">Close</button>
+    <a id="campaign-link" href="products.html" onclick="navigateToProducts()">Learn More</a>
+</div>
+
+
 <head>
 	<!-- Google tag (gtag.js) -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=G-LX2ZP2NCZZ"></script>
