--- a/index.html
+++ b/index.html
@@ -69,6 +69,10 @@
         <p>Total: <span id="total">$0.00</span></p>
         <button id="checkout" onclick="checkout()">Checkout</button>
     </aside>
+	
+	<a href="https://example.com/path/to/your/brochure.pdf" download="Your_Brochure.pdf">Download Brochure</a>
+
+
     <footer>
         <p>&copy; 2023 My E-commerce Store</p>
     </footer>
